# HaskML

./: haskml.cabal  haskml.cabal~  ml_plotter.py
.stack-work/install/x86_64-linux/lts-6.15/7.10.3/flag-cache/: QuickCheck-2.8.2-4a8ff054680a1e6817d7a2f4ce006391  StateVar-1.1.0.4-c870ecc28adfa9764b145a54f6a2c147  adjunctions-4.3-6560e1a265cc6d0d13417e2fff6a2084  base-orphans-0.5.4-80aa061a7fc1e4ab8c82be1540afd813  bifunctors-5.2-e901e58a1f692b35e864ebeecde90ba3  bytes-0.15.2-bfd050301da33d70a23e98ff3d02cdc5  cereal-0.5.2.0-5dc4ca6bc62ba38ba7728470b9a480c5  comonad-4.2.7.2-4c06ad59e8f1640d751fb18f0c315142  contravariant-1.4-55200b9f0a5e1fba15c5250daf39819a  csv-0.1.2-f518696fa72e491de9c071a3263fcf25  distributive-0.5.0.2-393a023f71dc3cd11f1fef5933233cdf  exceptions-0.8.3-d4f6a36a62bf146f0a4221b7c358d663  fail-4.9.0.0-dd8812a5b6b0a0ce790ee5a93be03a9d  free-4.12.4-1f6c876d84b568df61e0ac1fd717968b  hashable-1.2.4.0-eb8410705fa05638eebff0131e5dac80  haskml-0.1.0.0-14b47784f86b828db7491d1428ed7d8f  haskml-0.1.0.0-e6c2697a62cb3e983d7f75dea61c1d15  hmatrix-0.17.0.2-f9f893e3933b3c13a0fd914119200c97  kan-extensions-4.2.3-e4925f38de76626cfa3d4d1f3328b032  lens-4.13-7772a630ad282bd3b5d0882e89ef4511  linear-1.20.5-1096f93100c09d6daee900fba526e857  (+22 more)
app/: Main.hs  Main.hs~
src/: Adaline.hs  Adaline.hs~  AdalineGD.hs  AdalineSGD.hs  Game.hs  Handwriting.hs  Lib.hs  Lib.hs~  LinearClassifier.hs  LinearClassifier.hs~  Perceptron.hs  Perceptron.hs~  TestData.hs  TestData.hs~
src/Old/: AdalineGD.hs  AdalineSGD.hs  Lib.hs  LinearClassifier.hs  Maggie.hs  Perceptron.hs  TestData.hs
(+19 files in other folders)
